// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemUI renders predictably when complete 1`] = `
<li
  className="item flex-row"
>
  <span
    className="flex-auto item-checkbox-ui"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
  <input
    checked={false}
    className="item-checkbox-input"
    hidden={true}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="item-description flex-grow flex-align-center"
  >
    one
  </span>
  <button
    className="clear-button monospaced-button flex-shrink flex-align-top"
    onClick={[Function]}
    onKeyPress={[Function]}
  >
    delete
  </button>
</li>
`;

exports[`ItemUI renders predictably when incomplete 1`] = `
<li
  className="item flex-row"
>
  <span
    className="flex-auto item-checkbox-ui item-checkbox-ui-complete"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
  <input
    checked={true}
    className="item-checkbox-input"
    hidden={true}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="item-description-complete flex-grow flex-align-center"
  >
    one
  </span>
  <button
    className="clear-button monospaced-button flex-shrink flex-align-top"
    onClick={[Function]}
    onKeyPress={[Function]}
  >
    delete
  </button>
</li>
`;
